--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,15 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testImplementation "log4j:log4j:1.2.17"
+    implementation (
+            'log4j:log4j:1.2.17' ,
+            'com.google.code.findbugs:jsr305:3.0.2',
+            'com.toedter:jcalendar:1.4'
+    )
+    testImplementation (
+            'org.junit.jupiter:junit-jupiter-api:5.8.1',
+            'log4j:log4j:1.2.17'
+    )
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
